--- a/tabelas/rq3-estudos-vulnerabilidades.tex
+++ b/tabelas/rq3-estudos-vulnerabilidades.tex
@@ -3,63 +3,35 @@
 \fontsize{8pt}{8pt}\selectfont
 \caption{Estudos que abordam cada uma das vulnerabilidades e problemas dos CIs}
 \label{tab:rq3-estudos-vulnerabilidades}
-\begin{tabular}{@{}clcl@{}}
+\begin{tabular}{cl|cl} 
 \toprule
-\multicolumn{1}{l}{\textbf{\begin{tabular}[c]{@{}l@{}}Vulnerabilidade/\\ Problema\end{tabular}}} &
-  \textbf{Estudos} &
-  \multicolumn{1}{l}{\textbf{\begin{tabular}[c]{@{}l@{}}Vulnerabilidade/\\ Problema\end{tabular}}} &
-  \textbf{Estudos} \\ \midrule
-$V_{1}$ &
-  \#20, \#79 &
-  $V_{14}$ &
-  \begin{tabular}[c]{@{}l@{}}\#14, \#16, \#18, \#20, \#26, \#51, \#56, \#71\\ \#79, \#82, \#84, \#85, \#88, \#90, \#92\end{tabular} \\ \midrule
-$V_{2}$ &
-  \#33, \#75, \#84, \#90 &
-  $V_{15}$ &
-  \#18, \#51, \#64, \#83 \\ \midrule
-$V_{3}$ &
-  \#19, \#27, \#63, \#71, \#79, \#85, \#88 &
-  $V_{16}$ &
-  \#65, \#79, \#80, \#85, \#87, \#88, \#102 \\ \midrule
-$V_{4}$ &
-  \#18, \#28, \#33, \#63, \#81, \#85, \#101 &
-  $V_{17}$ &
-  \#08, \#33, \#90, \#101 \\ \midrule
-$V_{5}$ &
-  \#50, \#63, \#98 &
-  $V_{18}$ &
-  \begin{tabular}[c]{@{}l@{}}\#02, \#07, \#13, \#18, \#19, \#33, \#35, \#36\\ \#47, \#51, \#53, \#56, \#63, \#76, \#81, \#85\\ \#88, \#92, \#101\end{tabular} \\ \midrule
-$V_{6}$ &
-  \#08, \#13, \#39 &
-  $V_{19}$ &
-  \#26, \#63, \#86, \#90, \#101 \\ \midrule
-$V_{7}$ &
-  \#39 &
-  $V_{20}$ &
-  \begin{tabular}[c]{@{}l@{}}\#02, \#03, \#05, \#07, \#08, \#14, \#16, \#19\\ \#20, \#30, \#33, \#52, \#53, \#55, \#63, \#56\\ \#65, \#71, \#75, \#80, \#83, \#86, \#87, \#88\\ \#89, \#90, \#91, \#92, \#102\end{tabular} \\ \midrule
-$V_{8}$ &
-  \#02, \#31, \#32, \#39, \#62, \#71, \#81, \#101 &
-  $V_{21}$ &
-  \#16, \#17, \#29, \#55, \#98 \\ \midrule
-$V_{9}$ &
-  \#16, \#53, \#94 &
-  $V_{22}$ &
-  \#45 \\ \midrule
-$V_{10}$ &
-  \#35, \#53, \#63, \#75, \#90 &
-  $V_{23}$ &
-  \begin{tabular}[c]{@{}l@{}}\#01, \#02, \#04, \#06, \#14, \#16, \#18, \#19\\ \#20, \#21, \#24, \#26, \#27, \#33, \#34, \#37\\ \#47, \#51, \#52, \#53, \#56, \#62, \#63, \#64\\ \#68, \#69, \#70, \#71, \#75, \#76, \#79, \#81\\ \#82, \#83, \#84, \#85, \#86, \#89, \#90, \#92\\ \#96, \#101\end{tabular} \\ \midrule
-$V_{11}$ &
-  \#02, \#13, \#18, \#19, \#31 &
-  $VP$ &
-  \begin{tabular}[c]{@{}l@{}}\#07, \#09, \#10, \#11, \#15, \#21, \#22, \#23, \#24\\ \#28, \#34, \#40, \#41, \#42, \#43, \#44, \#46\\ \#47, \#58, \#59, \#60, \#61, \#73, \#74, \#77\\ \#78, \#89, \#97, \#99, \#100, \#103, \#104\end{tabular} \\ \midrule
-$V_{12}$ &
-  \begin{tabular}[c]{@{}l@{}}\#02, \#13, \#18, \#33, \#51, \#53, \#63, \#75\\ \#90, \#92\end{tabular} &
-  $CSS$ &
-  \#07, \#48 \\ \midrule
-$V_{13}$ &
-  \begin{tabular}[c]{@{}l@{}}\#02, \#20, \#26, \#37, \#56, \#76, \#79, \#83\\ \#90\end{tabular} &
-   &
-   \\ \bottomrule
+\multicolumn{1}{l}{\begin{tabular}[c]{@{}l@{}}\textbf{Vulnerabilidade/}\\\textbf{ Problema}\end{tabular}} & \textbf{Estudos}                                                                                    & \multicolumn{1}{l}{\begin{tabular}[c]{@{}l@{}}\textbf{Vulnerabilidade/}\\\textbf{ Problema}\end{tabular}} & \textbf{Estudos}                                                                                                                                                                                                                                                                                          \\ 
+\midrule
+$V_{1}$                                                                                                   & \#20, \#79                                                                                          & $V_{14}$                                                                                                  & \begin{tabular}[c]{@{}l@{}}\#14, \#16, \#18, \#20, \#26, \#51, \#56, \#71\\ \#79, \#82, \#84, \#85, \#88, \#90, \#92\end{tabular}                                                                                                                                                                         \\ 
+\midrule
+$V_{2}$                                                                                                   & \#33, \#75, \#84, \#90                                                                              & $V_{15}$                                                                                                  & \#18, \#51, \#64, \#83                                                                                                                                                                                                                                                                                    \\ 
+\midrule
+$V_{3}$                                                                                                   & \#19, \#27, \#63, \#71, \#79, \#85, \#88                                                            & $V_{16}$                                                                                                  & \#65, \#79, \#80, \#85, \#87, \#88, \#102                                                                                                                                                                                                                                                                 \\ 
+\midrule
+$V_{4}$                                                                                                   & \#18, \#28, \#33, \#63, \#81, \#85, \#101                                                           & $V_{17}$                                                                                                  & \#08, \#33, \#90, \#101                                                                                                                                                                                                                                                                                   \\ 
+\midrule
+$V_{5}$                                                                                                   & \#50, \#63, \#98                                                                                    & $V_{18}$                                                                                                  & \begin{tabular}[c]{@{}l@{}}\#02, \#07, \#13, \#18, \#19, \#33, \#35, \#36\\ \#47, \#51, \#53, \#56, \#63, \#76, \#81, \#85\\ \#88, \#92, \#101\end{tabular}                                                                                                                                               \\ 
+\midrule
+$V_{6}$                                                                                                   & \#08, \#13, \#39                                                                                    & $V_{19}$                                                                                                  & \#26, \#63, \#86, \#90, \#101                                                                                                                                                                                                                                                                             \\ 
+\midrule
+$V_{7}$                                                                                                   & \#39                                                                                                & $V_{20}$                                                                                                  & \begin{tabular}[c]{@{}l@{}}\#02, \#03, \#05, \#07, \#08, \#14, \#16, \#19\\ \#20, \#30, \#33, \#52, \#53, \#55, \#63, \#56\\ \#65, \#71, \#75, \#80, \#83, \#86, \#87, \#88\\ \#89, \#90, \#91, \#92, \#102\end{tabular}                                                                                  \\ 
+\midrule
+$V_{8}$                                                                                                   & \#02, \#31, \#32, \#39, \#62, \#71, \#81, \#101                                                     & $V_{21}$                                                                                                  & \#16, \#17, \#29, \#55, \#98                                                                                                                                                                                                                                                                              \\ 
+\midrule
+$V_{9}$                                                                                                   & \#16, \#53, \#94                                                                                    & $V_{22}$                                                                                                  & \#45                                                                                                                                                                                                                                                                                                      \\ 
+\midrule
+$V_{10}$                                                                                                  & \#35, \#53, \#63, \#75, \#90                                                                        & $V_{23}$                                                                                                  & \begin{tabular}[c]{@{}l@{}}\#01, \#02, \#04, \#06, \#14, \#16, \#18, \#19\\ \#20, \#21, \#24, \#26, \#27, \#33, \#34, \#37\\ \#47, \#51, \#52, \#53, \#56, \#62, \#63, \#64\\ \#68, \#69, \#70, \#71, \#75, \#76, \#79, \#81\\ \#82, \#83, \#84, \#85, \#86, \#89, \#90, \#92\\ \#96, \#101\end{tabular}  \\ 
+\midrule
+$V_{11}$                                                                                                  & \#02, \#13, \#18, \#19, \#31                                                                        & $VP$                                                                                                      & \begin{tabular}[c]{@{}l@{}}\#07, \#09, \#10, \#11, \#15, \#21, \#22, \#23,\\\#24, \#28, \#34, \#40, \#41, \#42, \#43, \#44,\\\#46, \#47, \#58, \#59, \#60, \#61, \#73, \#74,\\\#77, \#78, \#89, \#97, \#99, \#100, \#103, \#104\end{tabular}                                                              \\ 
+\midrule
+$V_{12}$                                                                                                  & \begin{tabular}[c]{@{}l@{}}\#02, \#13, \#18, \#33, \#51, \#53, \#63, \#75\\ \#90, \#92\end{tabular} & $CSS$                                                                                                     & \#07, \#48                                                                                                                                                                                                                                                                                                \\ 
+\midrule
+$V_{13}$                                                                                                  & \begin{tabular}[c]{@{}l@{}}\#02, \#20, \#26, \#37, \#56, \#76, \#79, \#83\\ \#90\end{tabular}       &                                                                                                           &                                                                                                                                                                                                                                                                                                           \\
+\bottomrule
 \end{tabular}
 \end{table}
