--- a/tabelas/rq3-vulnerabilidades.tex
+++ b/tabelas/rq3-vulnerabilidades.tex
@@ -8,7 +8,7 @@
 \textbf{Sigla} & \textbf{Vulnerabilidade / Problema} & \textbf{Sigla} & \textbf{Vulnerabilidade / Problema} \\ \midrule
 $V_{1}$  & Ataque de profundidade da pilha de chamadas & $V_{14}$ & Dependência de \textit{timestamp}       \\
 $V_{2}$  & Ataque DoS com operações ilimitadas         & $V_{15}$ & Desordem de exceções           \\
-$V_{3}$  & Autenticação com \textit{tx.origin}                  & $V_{16}$ & Divisão por zero               \\
+$V_{3}$  & Autenticação com \texttt{tx.origin}                  & $V_{16}$ & Divisão por zero               \\
 $V_{4}$  & Bloqueio de Ether                           & $V_{17}$ & Endereço curto                 \\
 $V_{5}$  & Consumo de \textit{gas} ineficiente                  & $V_{18}$ & Exceções não tratadas          \\
 $V_{6}$  & Contrato guloso                             & $V_{19}$ & Chamada externa não verificada \\
