--- a/tabelas/vulnerabilidades.tex
+++ b/tabelas/vulnerabilidades.tex
@@ -13,7 +13,7 @@
 \hline
 Autenticação com~\texttt{tx.origin}                                                           & \begin{tabular}[c]{@{}l@{}}Ocorre quando um contrato utiliza~\texttt{tx.origin}~para~autenticação do dono ou administrador do\\contrato ao invés de usar msg.sender. Assim, autenticação pode ser comprometida por~um \\ataque~\textit{phishing}.\end{tabular}                                                                                                                                                                                                                                                                                                                                                             \\ 
 \hline
-Bloqueio de Ether                                                                    & \begin{tabular}[c]{@{}l@{}}Os fundos do contrato ou o saldo em ether são~travados indefinidamente, isto é, o CI pode\\receber Ether mas não pode enviar.\end{tabular}                                                                                                                                                                                                                                                                                                                                                                                                                                    \\ 
+Bloqueio de Ether                                                                    & \begin{tabular}[c]{@{}l@{}}Os fundos do contrato ou o saldo em ether são~travados indefinidamente, isto é, o CI pode\\receber Ether mas não pode enviar. Essa vulnerabilidade é conhecida também como contrato\\guloso.\end{tabular}                                                                                                                                                                                                                                                                                                                                                                                                                                    \\ 
 \hline
 Consumo de~\textit{gas}~ineficiente                                                           & Consumo de~\textit{gas}~desnecessário na execução do~código do contrato.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \\ 
 \hline
